--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,7 @@ scikit_learn==1.1.1
 scipy==1.7.3
 seaborn==0.11.2
 torch==1.12.0
+streamlit-pandas-profiling==0.1.3
+tables
+html5lib==1.1
 ./streamlit-1.9.0-py2.py3-none-any.whl
